Changes for 3.4.4rc1

New features:

Bug fixes:
..F....... [ZBX-12666] fixed ETag comparison check in jsLoader for web server with enabled compression (gcalenko)
..F....... [ZBX-12775] fixed undefined index error in dashboard problems widget (miks)
........S. [ZBX-12857] improved pre-processing manager performance when processing large number of values (wiper)
........S. [ZBX-12259] added an informative warning about lack of data for macros used in LLD rule filter (viktors)

--------------------------------------------------------------------------------
Changes for 3.4.3

3.4.3rc1 was released as 3.4.3 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.3rc1

New features:
...G...PS. [ZBXNEXT-1862] modified server, proxy and agent to follow changes in /etc/resolv.conf (Andris)

Bug fixes:
..F.I..... [ZBX-12659] fixed missing information in "Status of Zabbix" widget with huge sessions table (Sasha)
..F....... [ZBX-12788] fixed error when template is added to hosts via mass update form (gcalenko, vmurzins)
.......P.. [ZBX-12838] fixed trap, snmptrap items of log type not being processed by proxy (wiper)
..F....... [ZBX-12777] fixed default value for JMX endpoint on item type change in edit form and mass update form (gcalenko)
...G...PS. [ZBX-12594] fixed system.run, user parameter and external check not to become unsupported when exit code is different than zero (vso)
........S. [ZBX-10547] fixed IT services calculation in parallel transactions not seeing each other changes when calculating common parent service (vso)
........S. [ZBX-12791] fixed hanging of preprocessing manager process due to file descriptor limit exhaustion when too many data gathering processes are configured to start (gleb)
..F....... [ZBXNEXT-3732] fixed IE and Opera specific javascript bug; improved the depth control of navigation tree items; improved coding style and performance (miks)